# a2d

./: .gitattributes  .gitignore  Cargo.toml  NOTES.md  README.md  build.rs
examples/: ex1.rs  ex2.rs
examples/ex1/: main.rs
examples/ex2/: main.rs
examples/ex3/: main.rs
examples/ex4/: main.rs
examples/ex5-txt/: main.rs
src/: color.rs  error.rs  lib.rs  transform.rs
src/g2d/: batch.rs  g2d.rs  iface.rs  imp.rs  inst.rs  mod.rs  rect.rs  sheet.rs  sprite.rs
src/g2d/sprite/: batch.rs  grid.rs  map.rs  mod.rs  sheet.rs
src/geo/: dim.rs  mod.rs  point.rs  rect.rs
src/res/: mod.rs
src/shaders/: mod.rs  shader.frag  shader.vert
src/txt/: grid.rs  mod.rs
