[package]
name = "a2d"
version = "0.1.0"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bytemuck = "1.2.0"
futures = "0.3.5"
image = "0.23.6"
wgpu = "0.5.0"
winit = "0.22.2"


[build-dependencies]
shaderc = "0.6.2"
