[package]
name = "a2d"
version = "0.1.5"
authors = ["Kyumin Kim <math4tots@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/math4tots/a2d"
description = "A 2D graphics library"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2.0"
image = "0.23.6"
wgpu = "0.5.0"
winit = "0.22.2"

[dev-dependencies]
futures = "0.3.5"

[build-dependencies]
shaderc = "0.6.2"
